tests/baselines/reference/separate1-1.errors.txt
==== tests/cases/compiler/separate1-1.ts (1 errors) ====
    X.f();
    ~
!!! separate1-1.ts(1,1): error TS2095: Could not find symbol 'X'.